Fixed overflow-x
When sized down small enough the page would overflow with a white bar on
the right side making a horizontal scroll bar. DSI logo was too wide so
overflow-x:hidden was added to body and maxwidth to logo style.

--- a/src/style.less
+++ b/src/style.less
@@ -29,6 +29,7 @@ header, nav, footer, section { width: 100%; }
 body {
   color: @white;
   font: normal .85em @headerFont;
+  overflow-x: hidden;
 }
 
 p {
@@ -52,6 +53,10 @@ li {
   list-style: disc outside none;
   display: list-item;
   margin-left: 2em;
+}
+
+#expLogo {
+  max-width: 100%;
 }
 
 // Header Styling
